hphp/hack/test/typecheck/new_inference/tconst/tconst_on_generics6.php.like_types.exp
File "tconst_on_generics6.php", line 43, characters 14-17:
Some type constraint(s) here are violated (Typing[4062])
File "tconst_on_generics6.php", line 30, characters 31-32:
'T1' is a constrained type parameter
File "tconst_on_generics6.php", line 30, characters 86-86:
You are trying to access the member T but this is not an object, it is a dynamic value
File "tconst_on_generics6.php", line 30, characters 31-32:
Definition is here
File "tconst_on_generics6.php", line 43, characters 14-17:
Some type constraint(s) here are violated (Typing[4062])
File "tconst_on_generics6.php", line 30, characters 31-32:
'T1' is a constrained type parameter
File "tconst_on_generics6.php", line 30, characters 86-86:
You are trying to access the member T but this is not an object, it is a dynamic value
File "tconst_on_generics6.php", line 30, characters 37-39:
Definition is here
File "tconst_on_generics6.php", line 43, characters 14-17:
A 'where' type constraint is violated here (Typing[4110])
File "tconst_on_generics6.php", line 30, characters 26-29:
This method's where constraints contain a generic type access
File "tconst_on_generics6.php", line 30, characters 55-56:
Some type constraint(s) are violated here
File "tconst_on_generics6.php", line 30, characters 55-56:
T2 is a constrained type parameter
File "tconst_on_generics6.php", line 10, characters 18-20:
Expected int
File "tconst_on_generics6.php", line 30, characters 86-86:
  resulting from accessing the type constant 'T'
File "tconst_on_generics6.php", line 30, characters 47-52:
  on an object of type IntBox
File "tconst_on_generics6.php", line 30, characters 55-56:
But got dynamic
File "tconst_on_generics6.php", line 43, characters 19-20:
Invalid argument (Typing[4110])
File "tconst_on_generics6.php", line 10, characters 18-20:
Expected int
File "tconst_on_generics6.php", line 30, characters 86-86:
  resulting from accessing the type constant 'T'
File "tconst_on_generics6.php", line 30, characters 47-52:
  on an object of type IntBox
File "tconst_on_generics6.php", line 18, characters 18-23:
But got string
File "tconst_on_generics6.php", line 30, characters 86-86:
  resulting from accessing the type constant 'T'
File "tconst_on_generics6.php", line 39, characters 12-20:
  on an object of exactly the class StringBox
File "tconst_on_generics6.php", line 44, characters 15-18:
Some type constraint(s) here are violated (Typing[4062])
File "tconst_on_generics6.php", line 30, characters 31-32:
'T1' is a constrained type parameter
File "tconst_on_generics6.php", line 30, characters 86-86:
You are trying to access the member T but this is not an object, it is a dynamic value
File "tconst_on_generics6.php", line 30, characters 31-32:
Definition is here
File "tconst_on_generics6.php", line 44, characters 15-18:
Some type constraint(s) here are violated (Typing[4062])
File "tconst_on_generics6.php", line 30, characters 31-32:
'T1' is a constrained type parameter
File "tconst_on_generics6.php", line 30, characters 86-86:
You are trying to access the member T but this is not an object, it is a dynamic value
File "tconst_on_generics6.php", line 30, characters 37-39:
Definition is here
File "tconst_on_generics6.php", line 44, characters 15-18:
A 'where' type constraint is violated here (Typing[4110])
File "tconst_on_generics6.php", line 30, characters 26-29:
This method's where constraints contain a generic type access
File "tconst_on_generics6.php", line 30, characters 55-56:
Some type constraint(s) are violated here
File "tconst_on_generics6.php", line 30, characters 55-56:
T2 is a constrained type parameter
File "tconst_on_generics6.php", line 10, characters 18-20:
Expected int
File "tconst_on_generics6.php", line 30, characters 86-86:
  resulting from accessing the type constant 'T'
File "tconst_on_generics6.php", line 30, characters 47-52:
  on an object of type IntBox
File "tconst_on_generics6.php", line 30, characters 55-56:
But got dynamic
File "tconst_on_generics6.php", line 44, characters 20-21:
Invalid argument (Typing[4110])
File "tconst_on_generics6.php", line 10, characters 18-20:
Expected int
File "tconst_on_generics6.php", line 30, characters 86-86:
  resulting from accessing the type constant 'T'
File "tconst_on_generics6.php", line 30, characters 47-52:
  on an object of type IntBox
File "tconst_on_generics6.php", line 30, characters 86-86:
But got <expr#1>::T
  by accessing the type constant 'T'
File "tconst_on_generics6.php", line 38, characters 26-28:
on the expression dependent type <expr#1>
File "tconst_on_generics6.php", line 44, characters 20-21:
  where '<expr#1>' is a reference to this expression
File "tconst_on_generics6.php", line 45, characters 14-17:
Some type constraint(s) here are violated (Typing[4062])
File "tconst_on_generics6.php", line 33, characters 31-32:
'T1' is a constrained type parameter
File "tconst_on_generics6.php", line 33, characters 73-73:
You are trying to access the member T but this is not an object, it is a dynamic value
File "tconst_on_generics6.php", line 33, characters 31-32:
Definition is here
File "tconst_on_generics6.php", line 45, characters 14-17:
Some type constraint(s) here are violated (Typing[4062])
File "tconst_on_generics6.php", line 33, characters 31-32:
'T1' is a constrained type parameter
File "tconst_on_generics6.php", line 33, characters 73-73:
You are trying to access the member T but this is not an object, it is a dynamic value
File "tconst_on_generics6.php", line 33, characters 37-39:
Definition is here
File "tconst_on_generics6.php", line 45, characters 19-20:
Invalid argument (Typing[4110])
File "tconst_on_generics6.php", line 33, characters 42-43:
Some type constraint(s) are violated here
File "tconst_on_generics6.php", line 33, characters 42-43:
T2 is a constrained type parameter
File "tconst_on_generics6.php", line 33, characters 73-73:
Expected <expr#2>::T
  by accessing the type constant 'T'
File "tconst_on_generics6.php", line 38, characters 12-20:
on the expression dependent type <expr#2>
File "tconst_on_generics6.php", line 45, characters 19-20:
  where '<expr#2>' is a reference to this expression
File "tconst_on_generics6.php", line 33, characters 42-43:
But got dynamic
File "tconst_on_generics6.php", line 47, characters 17-18:
Invalid argument (Typing[4110])
File "tconst_on_generics6.php", line 33, characters 42-43:
Some type constraint(s) are violated here
File "tconst_on_generics6.php", line 33, characters 42-43:
T2 is a constrained type parameter
File "tconst_on_generics6.php", line 51, characters 24-29:
Expected string
File "tconst_on_generics6.php", line 33, characters 42-43:
But got dynamic
File "tconst_on_generics6.php", line 30, characters 86-86:
You are trying to access the member T but this is not an object, it is a dynamic value (Typing[4062])
File "tconst_on_generics6.php", line 30, characters 37-39:
Definition is here
File "tconst_on_generics6.php", line 33, characters 73-73:
You are trying to access the member T but this is not an object, it is a dynamic value (Typing[4062])
File "tconst_on_generics6.php", line 33, characters 37-39:
Definition is here
File "tconst_on_generics6.php", line 30, characters 86-86:
You are trying to access the member T but this is not an object, it is a dynamic value (Typing[4062])
File "tconst_on_generics6.php", line 30, characters 37-39:
Definition is here
File "tconst_on_generics6.php", line 31, characters 16-19:
You are trying to access the member getK but this is not an object, it is a dynamic value or an object of type Box (Typing[4062])
File "tconst_on_generics6.php", line 30, characters 37-39:
Definition is here
File "tconst_on_generics6.php", line 33, characters 73-73:
You are trying to access the member T but this is not an object, it is a dynamic value (Typing[4062])
File "tconst_on_generics6.php", line 33, characters 37-39:
Definition is here
File "tconst_on_generics6.php", line 34, characters 16-19:
You are trying to access the member getK but this is not an object, it is a dynamic value or an object of type Box (Typing[4062])
File "tconst_on_generics6.php", line 33, characters 37-39:
Definition is here
